ing/helloworld.yaml
apiVersion: v1
kind: Pod
metadata:
    name: helloworld-pod
    labels:
        app: helloworld-pod
        tier: backend
spec:
    containers:
    - name: api-server
      image: chapin/docker-demo:1.0.0
      ports:
      - containerPort: 3000
