ing/helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: helloword-service
spec:
    ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      app: helloworld-pod
