ing/helloworld-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: helloworld=ingress
    namespace: default
spec:
    rules:
    - host: helloworld.example.com
      http:
          paths:
          - backend:
              serviceName: hellworld-service
              servicePort: 3000
